Fix footer alignment.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,20 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
 @import "minima";
 @import "bootstrap";
+
+
+.social-media-list {
+  text-align: left;
+  list-style-position: inside;
+}
+
+.icon > svg {
+  height: 16px;
+}
+
+.publication {
+  text: center;
+  margin: auto;
+}
